# MagShift

./: LICENSE  README.md  default.nix  flake.nix  install.sh  main.py  module.nix  pyproject.toml  shell.nix
